force-app/main/default/objects/BCDireccionElemento__c/BCDireccionElemento__c.object-meta.xml
<CustomObject>
    <label>Direccion Elemento</label>
    <nameField>
        <label>Nombre de Direccion Elemento</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Direcciones de elementos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>