force-app/main/default/objects/BCDireccionElemento__c/fields/BCCoordenadas__c.field-meta.xml
<CustomField>
    <fullName>BCCoordenadas__c</fullName>
    <label>Coordenadas</label>
    <type>TextArea</type>
</CustomField>