force-app/main/default/objects/BCDireccionElemento__c/fields/BCDireccion__c.field-meta.xml
<CustomField>
    <fullName>BCDireccion__c</fullName>
    <label>Dirección</label>
    <type>TextArea</type>
</CustomField>