force-app/main/default/objects/BCDireccionElemento__c/fields/BCSolicitud__c.field-meta.xml
<CustomField>
    <fullName>BCSolicitud__c</fullName>
    <label>Solicitud</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Solicitud_Caso</relationshipLabel>
    <relationshipName>Direcciones_de_elementos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>