force-app/main/default/objects/BCDireccionElemento__c/fields/BCTipoElemento__c.field-meta.xml
<CustomField>
    <fullName>BCTipoElemento__c</fullName>
    <label>Tipo de elemento</label>
    <type>TextArea</type>
</CustomField>