force-app/main/default/objects/BCDireccionElemento__c/fields/BCTipoSolicitud__c.field-meta.xml
<CustomField>
    <fullName>BCTipoSolicitud__c</fullName>
    <label>Tipo de solicitud</label>
    <type>TextArea</type>
</CustomField>